--- a/html-css-js/module-2/modern-solution.htm
+++ b/html-css-js/module-2/modern-solution.htm
@@ -5,7 +5,7 @@
 	<meta content="Dylan Richards" name="author">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>Module 2 Solution</title>
-	<link rel="stylesheet" type="text/css" href="assets/styles.css">
+	<link href="assets/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<header>
